Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ a:hover {
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 3px solid white;
   display: inline-block;
+  margin: 0 auto;
 }
 
 .button, input {
